--- a/7_javascriptFundamentals/modul 3/array2.html
+++ b/7_javascriptFundamentals/modul 3/array2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Array 2</title>
+    <title>Array 2 - index</title>
   </head>
   <body>
     <h1>Array 2</h1>
