liove curs challenges

--- a/7_javascriptFundamentals/vadana_mihai_assignment03/cartPage.html
+++ b/7_javascriptFundamentals/vadana_mihai_assignment03/cartPage.html
@@ -374,9 +374,7 @@
               </button>
             </div>
 
-            <a href="checkoutPage.html" class="btn btn-dark w-100 mb-3"
-              >Go To Checkout</a
-            >
+            <a href="#" class="btn btn-dark w-100 mb-3">Go To Checkout</a>
 
             <small class="text-muted d-block mb-2">
               Prices and costs are not displayed until you complete your
